...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/erv_live_fixtures"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:textDirection="rtl"
...
